Fixed capslock button swap, redshift autostart, env variables

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -8,7 +8,6 @@
 
 window#waybar {
     background: rgba(5, 5, 5, 0.8);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
     color: white;
 }
 
@@ -31,8 +30,8 @@ window#waybar {
 }
 
 #clock, #battery, #cpu, #memory, #backlight, #network, #pulseaudio, #custom-spotify, #tray, #mode, #idle_inhibitor {
-    padding: 0 5px;
-    margin: 0 5px;
+    padding: 0 3px;
+    margin: 0 3px;
 }
 
 
